@@ -21,7 +21,7 @@
 #define R_BUFFER_UTILS
 
 /* used in bind.c character.c deparse.c, printutils.c, saveload.c
-   scan.c seq.c sysutils.c */
+   scan.c seq.c sprintf.c sysutils.c */
 
 typedef struct {
  char *data;
@@ -29,7 +29,7 @@ typedef struct {
  size_t defaultSize;
 } R_StringBuffer;
 
-/* code in deparse.c */
+/* code in ./memory.c : */
 /* Note that R_StringBuffer *buf needs to be initialized before call */
 void *R_AllocStringBuffer(size_t blen, R_StringBuffer *buf);
 void R_FreeStringBuffer(R_StringBuffer *buf);
